Process Hacker

1.2.0.0
 * Added PE Inspector (can read exe/dll/sys files and their properties)
 * Added "Search Online" menu item
 * Added highlighting of processes and threads
 * Added "Always on Top" menu item
 * Added status bar messages and log
 * Added "Go to Parent" menu item
 * Removed "Close Active Window" menu item - practically same as "Terminate Process"
 * Added disassembler

1.1.5.0
 * Fixed memory leak with process icons
 * Removed useless starting "\" in account names
 * Fixed group menu item enabling and disabling
 * Added filtering of search results

1.1.4.5
 * Fixed crash when attempting to open privileges for System on XP
 * Added Groups Window (to view process groups)
 * Fixed Search window startup position

1.1.4.0
 * Enabled Select All for all lists on the main window
 * Added Privileges Window (to enable, disable and remove privileges)
 * Fixed error messages - they now have the correct Win32 error descriptions

1.1.3.5
 * Now saves column settings
 * Now saves results and memory window settings
 * Now saves selected tab

1.1.3.0
 * Completely rewrote thread list code
 * Can now display kernel threads on Vista
 * Disables thread priority menu item when there is an error
 * Now displays process 0 as System Idle Process
 * Fixed thread list for System Idle Process
 * Now displays description for System
 * Now has a good system of copying list items (currently in every ListView)

1.1.2.0
 * Completely rewrote process list code
 * Added lots of information to process tooltips

1.1.1.0
 * Memory editor is now properly activated from the Hacker Window
 * Fixed obscure bug where the process list disables itself
 * Added my email address
 * Added CONTEXT code
 * Now bolds the kernel name when the System process is selected
 * Fixed opening Memory Editor from Results Window
 * Changed Search button to a SplitButton
 * Added username column
 * Now shows process description and filename in tooltip
 * Added more "options"