@@ -121,6 +121,12 @@
             <setting name="AlwaysOnTop" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ThreadWindowSize" serializeAs="String">
+                <value>415, 503</value>
+            </setting>
+            <setting name="CallStackColumns" serializeAs="String">
+                <value />
+            </setting>
         </ProcessHacker.Properties.Settings>
     </userSettings>
 </configuration>
